load(
    "@io_bazel_rules_kotlin//kotlin:core.bzl",
    "define_kt_toolchain",
)

KOTLIN_LANGUAGE_LEVEL = "1.7"

JAVA_LANGUAGE_LEVEL = "17"

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", "1.3", "1.4", or "1.5"
    jvm_target = JAVA_LANGUAGE_LEVEL,  # "1.6", "1.8", "9", "10", "11", "12", or "13",
    language_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", "1.3", "1.4", or "1.5"
)
