load("//:rules/defs.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "solvers",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/main/kotlin/org/softwarecurmudgeon/common:common",
    ],
    visibility = [
      "//src/main/kotlin/org/softwarecurmudgeon:__subpackages__",
      "//src/test/kotlin/org/softwarecurmudgeon:__subpackages__",
    ],
)
